--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "6f89d8ec-15c6-4924-bfd1-d028186984fd",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "0742250a-bc83-4194-a03e-eae487c09234",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "2a794682-855b-40d1-ada7-43c5e36eb347",
    "metadata": {},
    "outputs": [
@@ -792,7 +792,7 @@
        "[7728394 rows x 46 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "f99aff6a-526a-4b34-8242-4c947a4514e4",
    "metadata": {
     "scrolled": true
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "3defb476-a727-40d7-80e0-f008105e5c49",
    "metadata": {},
    "outputs": [
@@ -934,7 +934,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "f8982c03-4de1-480d-93e2-a4b892022034",
    "metadata": {},
    "outputs": [
@@ -961,7 +961,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "7517803e-9cde-44f6-a6f7-618c3e682248",
    "metadata": {},
    "outputs": [
@@ -983,7 +983,7 @@
        "array(['US'], dtype=object)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -995,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "9fd8b9c0-edcc-4208-adba-44ff5575f821",
    "metadata": {},
    "outputs": [],
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "33106bb4-4b2d-48ad-8f8c-6c5b060f2c62",
    "metadata": {},
    "outputs": [],
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "a9a24ee2-e9d7-4eb3-bc37-232894330ee7",
    "metadata": {},
    "outputs": [],
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "635db2d8-696c-4ee9-aa35-c60fa0a65e39",
    "metadata": {},
    "outputs": [
@@ -1040,7 +1040,7 @@
        "'2017-07-23 11:36:01'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1052,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "67b93390-643b-417e-ad64-098e0927fb1e",
    "metadata": {},
    "outputs": [],
@@ -1065,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "67ee819f-d2ac-4dd7-90ce-7398a9a16709",
    "metadata": {},
    "outputs": [
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "d246cca0-8147-4465-b5c5-1eee2460b9fe",
    "metadata": {},
    "outputs": [
@@ -1179,7 +1179,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1190,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "fbf3ac55-9dc7-42f2-9350-e41c29ea52fb",
    "metadata": {},
    "outputs": [
@@ -1198,7 +1198,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/wr/g705p4v548q9pr0f6xzqsgmw0000gn/T/ipykernel_2211/2726576260.py:4: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "/var/folders/wr/g705p4v548q9pr0f6xzqsgmw0000gn/T/ipykernel_1210/2726576260.py:4: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  ax.set_xticklabels(df['State'].unique(), rotation=90)\n"
      ]
     },
@@ -1223,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "ca0e14ec-8a0b-4cb2-889f-ba31fe04aa2e",
    "metadata": {},
    "outputs": [
@@ -1239,7 +1239,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1250,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "37b3f9d1-3e7f-4974-841e-903fbfb0047c",
    "metadata": {},
    "outputs": [],
@@ -1266,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "178d53e4-c44a-4e66-803b-32423142e011",
    "metadata": {
     "scrolled": true
@@ -1318,7 +1318,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1330,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "3528e376-4a41-4f00-bbba-090ac0725550",
    "metadata": {},
    "outputs": [
@@ -1592,7 +1592,7 @@
        "std         1.328826e-01  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1603,7 +1603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "e9474bb3-ae26-4a84-8d1a-30fcf83ef508",
    "metadata": {},
    "outputs": [
@@ -1630,7 +1630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "e21658a9-0b3c-44ad-bfe7-f5e54763c5ff",
    "metadata": {},
    "outputs": [
@@ -1656,7 +1656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "0323952a-39fc-4d9c-99ef-d582238cd773",
    "metadata": {},
    "outputs": [
@@ -1683,7 +1683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "138986a9-0bd4-44d4-9b33-3e38fee5079e",
    "metadata": {},
    "outputs": [
@@ -2363,7 +2363,7 @@
        "[3934979 rows x 40 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2375,7 +2375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "7e1a152d-47b9-4167-9e9c-4f48d02b836e",
    "metadata": {},
    "outputs": [
@@ -2383,7 +2383,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/wr/g705p4v548q9pr0f6xzqsgmw0000gn/T/ipykernel_2211/162880586.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/wr/g705p4v548q9pr0f6xzqsgmw0000gn/T/ipykernel_1210/162880586.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -2399,7 +2399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "30012122-b2dc-42ec-b143-1935284264a4",
    "metadata": {},
    "outputs": [
@@ -3079,7 +3079,7 @@
        "[3934979 rows x 40 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3090,7 +3090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "896f52ed-8830-417e-90d5-183f3cbb19a3",
    "metadata": {},
    "outputs": [
@@ -3098,37 +3098,37 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/wr/g705p4v548q9pr0f6xzqsgmw0000gn/T/ipykernel_2211/2472360914.py:10: SettingWithCopyWarning: \n",
+      "/var/folders/wr/g705p4v548q9pr0f6xzqsgmw0000gn/T/ipykernel_1210/2472360914.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  new_df['Temperature(F)'].fillna(value=mean_value_temp, inplace=True)\n",
-      "/var/folders/wr/g705p4v548q9pr0f6xzqsgmw0000gn/T/ipykernel_2211/2472360914.py:11: SettingWithCopyWarning: \n",
+      "/var/folders/wr/g705p4v548q9pr0f6xzqsgmw0000gn/T/ipykernel_1210/2472360914.py:11: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  new_df['Wind_Chill(F)'].fillna(value=mean_value_wind_chill, inplace=True)\n",
-      "/var/folders/wr/g705p4v548q9pr0f6xzqsgmw0000gn/T/ipykernel_2211/2472360914.py:12: SettingWithCopyWarning: \n",
+      "/var/folders/wr/g705p4v548q9pr0f6xzqsgmw0000gn/T/ipykernel_1210/2472360914.py:12: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  new_df['Humidity(%)'].fillna(value=mean_value_humid, inplace=True)\n",
-      "/var/folders/wr/g705p4v548q9pr0f6xzqsgmw0000gn/T/ipykernel_2211/2472360914.py:13: SettingWithCopyWarning: \n",
+      "/var/folders/wr/g705p4v548q9pr0f6xzqsgmw0000gn/T/ipykernel_1210/2472360914.py:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  new_df['Pressure(in)'].fillna(value=mean_value_press, inplace=True)\n",
-      "/var/folders/wr/g705p4v548q9pr0f6xzqsgmw0000gn/T/ipykernel_2211/2472360914.py:14: SettingWithCopyWarning: \n",
+      "/var/folders/wr/g705p4v548q9pr0f6xzqsgmw0000gn/T/ipykernel_1210/2472360914.py:14: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  new_df['Visibility(mi)'].fillna(value=mean_value_vis, inplace=True)\n",
-      "/var/folders/wr/g705p4v548q9pr0f6xzqsgmw0000gn/T/ipykernel_2211/2472360914.py:15: SettingWithCopyWarning: \n",
+      "/var/folders/wr/g705p4v548q9pr0f6xzqsgmw0000gn/T/ipykernel_1210/2472360914.py:15: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  new_df['Wind_Speed(mph)'].fillna(value=mean_value_wind_speed,inplace=True)\n",
-      "/var/folders/wr/g705p4v548q9pr0f6xzqsgmw0000gn/T/ipykernel_2211/2472360914.py:16: SettingWithCopyWarning: \n",
+      "/var/folders/wr/g705p4v548q9pr0f6xzqsgmw0000gn/T/ipykernel_1210/2472360914.py:16: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -3157,7 +3157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "37980a5c-6d83-4013-a14e-70ee9987cfb7",
    "metadata": {},
    "outputs": [
@@ -3207,7 +3207,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3219,18 +3219,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "16e45283-cf84-4609-a766-cdf6d97d212e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#dropping more columns that are needed, there are too many nulls and we have the start location\n",
+    "#dropping more columns that aren't needed (there are too many nulls and we have the start location)\n",
     "new_df = new_df.drop(columns=['End_Lat', 'End_Lng'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "c970b8c1-411c-4fbc-bb1c-f31f52bc7c0a",
    "metadata": {},
    "outputs": [],
@@ -3253,7 +3253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "6f3209b0-f457-4941-9c44-7a684e6a82ab",
    "metadata": {},
    "outputs": [
@@ -3315,7 +3315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "bcb4619f-9ad3-4e4e-8bad-3ad873ab111b",
    "metadata": {},
    "outputs": [],
@@ -3326,7 +3326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "e0289ac8-4aa8-4dc4-9264-e441f26ea5cc",
    "metadata": {},
    "outputs": [],
@@ -3340,7 +3340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "273366fc-a685-4c81-9957-83c30df6124e",
    "metadata": {},
    "outputs": [
@@ -3388,7 +3388,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3399,7 +3399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "id": "3ad954b9-7e73-4cdc-8bd6-98dafbbd23b4",
    "metadata": {},
    "outputs": [
@@ -3451,7 +3451,7 @@
        "       'Thunder and Hail / Windy'], dtype=object)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3462,7 +3462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "id": "8ef551f5-ffcb-4a0e-a168-b7e018e54a50",
    "metadata": {},
    "outputs": [],
@@ -3533,7 +3533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "id": "5dce0cfd-eb3b-439b-9c7a-df565b5f0ff6",
    "metadata": {},
    "outputs": [
@@ -4189,7 +4189,7 @@
        "[3934979 rows x 38 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4200,7 +4200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "id": "4c55c00f-259e-4b33-afb0-6818d61dbfbe",
    "metadata": {},
    "outputs": [],
@@ -4212,7 +4212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "id": "dde4936b-a832-44bb-8d01-3680323b4493",
    "metadata": {},
    "outputs": [
@@ -4222,7 +4222,7 @@
        "0"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4233,7 +4233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "id": "38f349c0-c67d-4d90-99c9-fa9d91a0c364",
    "metadata": {},
    "outputs": [
@@ -4281,7 +4281,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4292,7 +4292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "id": "b7f35224-1637-43d6-b257-9cb4415f0d26",
    "metadata": {},
    "outputs": [
@@ -4354,7 +4354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "id": "60e5a43c-9b1f-47df-a806-a7e156b5ee58",
    "metadata": {},
    "outputs": [
@@ -4376,7 +4376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "id": "93c61fd4-b8b0-4cdb-ad38-fff529d4cb05",
    "metadata": {},
    "outputs": [
@@ -4391,7 +4391,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4402,7 +4402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "id": "ac18bd8a-2460-4a56-9f6f-b568d88beabe",
    "metadata": {},
    "outputs": [],
@@ -4415,7 +4415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "id": "4c189716-ae18-43e8-ab4b-07c2cf38e4e8",
    "metadata": {
     "scrolled": true
@@ -4433,7 +4433,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4446,7 +4446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 45,
    "id": "add050c2-1e4e-4a59-b7fd-8154308ccdec",
    "metadata": {},
    "outputs": [
@@ -4462,7 +4462,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4475,7 +4475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 46,
    "id": "a29b916b-93af-4d35-b5d5-2da454a93eed",
    "metadata": {},
    "outputs": [
@@ -4491,7 +4491,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4502,7 +4502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 47,
    "id": "adbbd36b-2895-41c4-bdef-0b32726c4158",
    "metadata": {},
    "outputs": [
@@ -4515,7 +4515,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4526,7 +4526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 48,
    "id": "ad807354-dc76-474d-886a-2b5941fe015c",
    "metadata": {},
    "outputs": [],
@@ -4537,11 +4537,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "f3089b86-99b7-4588-9888-3f8796fadcbb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# sns.heatmap(new.corr(), annot = False)"
+   ]
   }
  ],
  "metadata": {
