--- a/notebooks/modeling.ipynb
+++ b/notebooks/modeling.ipynb
@@ -595,9 +595,11 @@
   {
    "cell_type": "markdown",
    "id": "550ed092-524e-48ef-844d-8a27f3b03b6f",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "### SMOTE with Logistic Regression"
+    "### Logistic Regression with SMOTE"
    ]
   },
   {
@@ -811,9 +813,11 @@
   {
    "cell_type": "markdown",
    "id": "4ab84d25-49b5-41e6-92b1-1d230b5e3948",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "### SMOTE with Random Forest"
+    "### Random Forest with SMOTE"
    ]
   },
   {
@@ -973,7 +977,9 @@
   {
    "cell_type": "markdown",
    "id": "f40f4f7e-3b83-4393-b2cd-edf053cf2e93",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Random Forest: Feature Importances"
    ]
@@ -1210,9 +1216,11 @@
   {
    "cell_type": "markdown",
    "id": "493d7bbb-2393-470d-ab03-2d5533c20239",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "### NearMiss with Logistic Regression"
+    "### Logistic Regression with NearMiss"
    ]
   },
   {
@@ -1360,9 +1368,11 @@
   {
    "cell_type": "markdown",
    "id": "c09c0a8f-213a-4bc4-9f2e-3a5bc3b722ce",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "### NearMiss with Random Forest"
+    "### Random Forest with NearMiss"
    ]
   },
   {
@@ -1484,7 +1494,9 @@
   {
    "cell_type": "markdown",
    "id": "f8690e71-6a21-4fbe-9c8d-b81445f9fb1e",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Random Forest: Feature Importances"
    ]
@@ -1717,7 +1729,7 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "# Using a GridSearch"
+    "# Tuning Hyperparameters with GridSearchCV"
    ]
   },
   {
