more updates to notebooks

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -1198,7 +1198,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/wr/g705p4v548q9pr0f6xzqsgmw0000gn/T/ipykernel_1210/2726576260.py:4: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "/var/folders/wr/g705p4v548q9pr0f6xzqsgmw0000gn/T/ipykernel_1837/2726576260.py:4: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  ax.set_xticklabels(df['State'].unique(), rotation=90)\n"
      ]
     },
@@ -2383,7 +2383,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/wr/g705p4v548q9pr0f6xzqsgmw0000gn/T/ipykernel_1210/162880586.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/wr/g705p4v548q9pr0f6xzqsgmw0000gn/T/ipykernel_1837/162880586.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -3098,37 +3098,37 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/wr/g705p4v548q9pr0f6xzqsgmw0000gn/T/ipykernel_1210/2472360914.py:10: SettingWithCopyWarning: \n",
+      "/var/folders/wr/g705p4v548q9pr0f6xzqsgmw0000gn/T/ipykernel_1837/2472360914.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  new_df['Temperature(F)'].fillna(value=mean_value_temp, inplace=True)\n",
-      "/var/folders/wr/g705p4v548q9pr0f6xzqsgmw0000gn/T/ipykernel_1210/2472360914.py:11: SettingWithCopyWarning: \n",
+      "/var/folders/wr/g705p4v548q9pr0f6xzqsgmw0000gn/T/ipykernel_1837/2472360914.py:11: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  new_df['Wind_Chill(F)'].fillna(value=mean_value_wind_chill, inplace=True)\n",
-      "/var/folders/wr/g705p4v548q9pr0f6xzqsgmw0000gn/T/ipykernel_1210/2472360914.py:12: SettingWithCopyWarning: \n",
+      "/var/folders/wr/g705p4v548q9pr0f6xzqsgmw0000gn/T/ipykernel_1837/2472360914.py:12: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  new_df['Humidity(%)'].fillna(value=mean_value_humid, inplace=True)\n",
-      "/var/folders/wr/g705p4v548q9pr0f6xzqsgmw0000gn/T/ipykernel_1210/2472360914.py:13: SettingWithCopyWarning: \n",
+      "/var/folders/wr/g705p4v548q9pr0f6xzqsgmw0000gn/T/ipykernel_1837/2472360914.py:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  new_df['Pressure(in)'].fillna(value=mean_value_press, inplace=True)\n",
-      "/var/folders/wr/g705p4v548q9pr0f6xzqsgmw0000gn/T/ipykernel_1210/2472360914.py:14: SettingWithCopyWarning: \n",
+      "/var/folders/wr/g705p4v548q9pr0f6xzqsgmw0000gn/T/ipykernel_1837/2472360914.py:14: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  new_df['Visibility(mi)'].fillna(value=mean_value_vis, inplace=True)\n",
-      "/var/folders/wr/g705p4v548q9pr0f6xzqsgmw0000gn/T/ipykernel_1210/2472360914.py:15: SettingWithCopyWarning: \n",
+      "/var/folders/wr/g705p4v548q9pr0f6xzqsgmw0000gn/T/ipykernel_1837/2472360914.py:15: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  new_df['Wind_Speed(mph)'].fillna(value=mean_value_wind_speed,inplace=True)\n",
-      "/var/folders/wr/g705p4v548q9pr0f6xzqsgmw0000gn/T/ipykernel_1210/2472360914.py:16: SettingWithCopyWarning: \n",
+      "/var/folders/wr/g705p4v548q9pr0f6xzqsgmw0000gn/T/ipykernel_1837/2472360914.py:16: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -4526,13 +4526,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "id": "ad807354-dc76-474d-886a-2b5941fe015c",
    "metadata": {},
    "outputs": [],
    "source": [
     "#creating a new, smaller csv file \n",
-    "# new_df.to_csv('top_5_states.csv')"
+    "# new_df.to_csv('new_df.csv')"
    ]
   },
   {
