--- a/notebooks/modeling.ipynb
+++ b/notebooks/modeling.ipynb
@@ -315,7 +315,7 @@
     }
    ],
    "source": [
-    "%run EDA.ipynb"
+    "# %run EDA.ipynb"
    ]
   },
   {
@@ -367,11 +367,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "id": "7214ef3d-a2cc-4b89-9b9e-dfa91235aa7d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.linear_model import LogisticRegression, Lasso\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -391,7 +396,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "id": "0aa9b617-aa24-4367-9cf3-af3605af96a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#uploading the dataset\n",
+    "new_df = pd.read_csv('../data/new_df.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "443af7af-4e4a-4d75-a530-89625697d56b",
    "metadata": {},
    "outputs": [
@@ -400,49 +416,50 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 3859011 entries, 728 to 7728393\n",
-      "Data columns (total 38 columns):\n",
-      " #   Column                 Dtype         \n",
-      "---  ------                 -----         \n",
-      " 0   Severity               int64         \n",
-      " 1   Start_Time             datetime64[ns]\n",
-      " 2   End_Time               datetime64[ns]\n",
-      " 3   Start_Lat              float64       \n",
-      " 4   Start_Lng              float64       \n",
-      " 5   Distance(mi)           float64       \n",
-      " 6   Description            object        \n",
-      " 7   Street                 object        \n",
-      " 8   City                   object        \n",
-      " 9   County                 object        \n",
-      " 10  State                  object        \n",
-      " 11  Zipcode                object        \n",
-      " 12  Weather_Timestamp      datetime64[ns]\n",
-      " 13  Temperature(F)         float64       \n",
-      " 14  Wind_Chill(F)          float64       \n",
-      " 15  Humidity(%)            float64       \n",
-      " 16  Pressure(in)           float64       \n",
-      " 17  Visibility(mi)         float64       \n",
-      " 18  Wind_Speed(mph)        float64       \n",
-      " 19  Precipitation(in)      float64       \n",
-      " 20  Weather_Condition      object        \n",
-      " 21  Amenity                int64         \n",
-      " 22  Bump                   int64         \n",
-      " 23  Crossing               int64         \n",
-      " 24  Give_Way               int64         \n",
-      " 25  Junction               int64         \n",
-      " 26  No_Exit                int64         \n",
-      " 27  Railway                int64         \n",
-      " 28  Roundabout             int64         \n",
-      " 29  Station                int64         \n",
-      " 30  Stop                   int64         \n",
-      " 31  Traffic_Calming        int64         \n",
-      " 32  Traffic_Signal         int64         \n",
-      " 33  Turning_Loop           int64         \n",
-      " 34  Sunset                 float64       \n",
-      " 35  Civil_Twilight         float64       \n",
-      " 36  Nautical_Twilight      float64       \n",
-      " 37  Astronomical_Twilight  float64       \n",
-      "dtypes: datetime64[ns](3), float64(14), int64(14), object(7)\n",
+      "RangeIndex: 3859011 entries, 0 to 3859010\n",
+      "Data columns (total 39 columns):\n",
+      " #   Column                 Dtype  \n",
+      "---  ------                 -----  \n",
+      " 0   Unnamed: 0             int64  \n",
+      " 1   Severity               int64  \n",
+      " 2   Start_Time             object \n",
+      " 3   End_Time               object \n",
+      " 4   Start_Lat              float64\n",
+      " 5   Start_Lng              float64\n",
+      " 6   Distance(mi)           float64\n",
+      " 7   Description            object \n",
+      " 8   Street                 object \n",
+      " 9   City                   object \n",
+      " 10  County                 object \n",
+      " 11  State                  object \n",
+      " 12  Zipcode                object \n",
+      " 13  Weather_Timestamp      object \n",
+      " 14  Temperature(F)         float64\n",
+      " 15  Wind_Chill(F)          float64\n",
+      " 16  Humidity(%)            float64\n",
+      " 17  Pressure(in)           float64\n",
+      " 18  Visibility(mi)         float64\n",
+      " 19  Wind_Speed(mph)        float64\n",
+      " 20  Precipitation(in)      float64\n",
+      " 21  Weather_Condition      object \n",
+      " 22  Amenity                int64  \n",
+      " 23  Bump                   int64  \n",
+      " 24  Crossing               int64  \n",
+      " 25  Give_Way               int64  \n",
+      " 26  Junction               int64  \n",
+      " 27  No_Exit                int64  \n",
+      " 28  Railway                int64  \n",
+      " 29  Roundabout             int64  \n",
+      " 30  Station                int64  \n",
+      " 31  Stop                   int64  \n",
+      " 32  Traffic_Calming        int64  \n",
+      " 33  Traffic_Signal         int64  \n",
+      " 34  Turning_Loop           int64  \n",
+      " 35  Sunset                 float64\n",
+      " 36  Civil_Twilight         float64\n",
+      " 37  Nautical_Twilight      float64\n",
+      " 38  Astronomical_Twilight  float64\n",
+      "dtypes: float64(14), int64(15), object(10)\n",
       "memory usage: 1.1+ GB\n"
      ]
     }
