--- a/notebooks/modeling.ipynb
+++ b/notebooks/modeling.ipynb
@@ -1773,68 +1773,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb4b4d86-a201-4d37-8889-a4a4781e4d13",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"Model coefficients:\\n\")\n",
-    "for i in range(X.shape[1]):\n",
-    "    print(X.columns[i], \"=\", rf.coef_[i].round(5))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4c572d90-39bb-4064-b3a2-5224e1703417",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# compute the SHAP values for the linear model\n",
-    "explainer = shap.Explainer(rf.predict, X100)\n",
-    "shap_values = explainer(X)\n",
-    "\n",
-    "# make a standard partial dependence plot\n",
-    "sample_ind = 20\n",
-    "shap.partial_dependence_plot(\n",
-    "    \"MedInc\",\n",
-    "    rf.predict,\n",
-    "    X100,\n",
-    "    model_expected_value=True,\n",
-    "    feature_expected_value=True,\n",
-    "    ice=False,\n",
-    "    shap_values=shap_values[sample_ind : sample_ind + 1, :],"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5db28c25-4de7-4e9f-9bd0-e99bcea333ca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# the waterfall_plot shows how we get from shap_values.base_values to model.predict(X)[sample_ind]\n",
-    "shap.plots.waterfall(shap_values[sample_ind], max_display=14)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d6b34a29-7199-4459-aabe-0326141ceb4b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9e46b630-5fb7-4e0f-9a6e-747a47e66e69",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "05733905-cac5-404c-b5c8-a6042d81952e",
    "metadata": {},
    "outputs": [],
@@ -1843,7 +1781,9 @@
   {
    "cell_type": "markdown",
    "id": "625464e9-6487-46a5-9e3e-3e5c0ca6a399",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Black Box Models"
    ]
