--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -1115,6 +1115,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a828a701-e38e-4a93-8212-395c5bec0e48",
+   "metadata": {},
+   "source": [
+    "## Number of Accidents per Hour"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "id": "7d7894f5-0cf0-4bbe-be27-94e5aa77b731",
