--- a/notebooks/final.ipynb
+++ b/notebooks/final.ipynb
@@ -1798,7 +1798,7 @@
     "id": "Dt6KId8kgbeq"
    },
    "source": [
-    "For Precipitation, it's evident that higher feature values correlate with more severe accidents, while the opposite trend can be observed for Traffic Signal."
+    "The model predicts higher SHAP value for severe accidents and a lower SHAP value for non-severe accidents. For Precipitation, it's evident that higher feature values correlate with more severe accidents, while the opposite trend can be observed for Traffic Signal."
    ]
   },
   {
